--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,6 +21,6 @@ jobs:
     - name: Deploy Azure VM
       run: |
         az deployment group create \
-          --resource-group 'rg1' \
+          --resource-group rg1 \
           --template-file .github/workflows/main.bicep
           --parameters .github/workflows/parameters.json
