--- a/workflow.yaml
+++ b/workflow.yaml
@@ -24,6 +24,6 @@ jobs:
     - name: Deploy Bicep file
       run: |
         az deployment group create \
-          --resource-group rg1 \
-          --template-file main.bicep \
-          --parameters @main.parameters.json
+          --resource-group BH-Team \
+          --template-file Azure-bicep/blob/main/main.bicep \
+          --parameters Azure-bicep/blob/main/parameters.json
